<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.fragment.HomeChartsFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/_15sdp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="@dimen/_28sdp"
            android:layout_height="@dimen/_28sdp"
            android:src="@drawable/performance_ic"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="@string/portfolio_performance"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/gray"
            android:textStyle="normal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end|center_vertical">
            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/growth_ic"
                android:layout_marginEnd="@dimen/_4sdp"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2_71"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold"
                android:textColor="@color/green_100"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/day_ll"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:layout_weight="1"
            android:background="@drawable/corner_shape_unselected"
            android:elevation="@dimen/_10sdp"
            android:gravity="center">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/_1_d"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/week_ll"
            android:layout_width="0dp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@drawable/corner_shape_unselected"
            android:elevation="@dimen/_10sdp"
            android:gravity="center">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1_w"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/month_ll"
            android:layout_width="0dp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@drawable/corner_shape_unselected"
            android:elevation="@dimen/_10sdp"
            android:gravity="center">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1_m"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/year_ll"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@drawable/corner_shape_selected"
            android:elevation="@dimen/_10sdp"
            android:gravity="center">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1_y"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/all_ll"
            android:layout_width="0dp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@drawable/corner_shape_unselected"
            android:elevation="@dimen/_10sdp"
            android:gravity="center">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:textSize="@dimen/_14sdp"
        android:id="@+id/filter_range_txt"
        android:textColor="@android:color/darker_gray"
        android:text="@string/_0_to_24_hours"/>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_240sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginHorizontal="@dimen/_10sdp" />

</LinearLayout>